namespaces/live-1.cloud-platform.service.justice.gov.uk/laa-apply-for-legalaid-uat/06-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: laa-apply-for-legalaid-uat-ingress
  annotations:
    kubernetes.io/ingress.class: "modsec01"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecAction \
        "id:900000,\
          phase:1,\
          nolog,\
          pass,\
          t:none,\
          setvar:tx.paranoia_level=2"
spec:
  tls:
  - hosts:
    - master-applyforlegalaid-uat.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
  - host: master-applyforlegalaid-uat.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: laa-apply-for-legalaid-uat
          servicePort: 8080
